# ha-mitaffald

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.config/: nextest.toml
.github/workflows/: build.yml  publish_release.yml
config/: default.toml
pgo/: README.md  default.profdata
scripts/: deploy-latest-and-run.sh
src/: lib.rs  main.rs  settings.rs
src/homeassistant/: messages.rs  mod.rs
src/mitaffald/: mod.rs  sample_remote_response.html  settings.rs
src/mitaffald/remote_responses/: address_lookup.json  addressid_not_found.html  container_information.json  traditionaladdress_not_found.html
src/mitaffald/snapshots/: ha_mitaffald__mitaffald__tests__can_extract_data_using_traditional_address.snap
tests/: full_flow.rs  full_flow_insta.rs
tests/hivemq/: mod.rs
tests/mqtt/: mod.rs
tests/snapshots/: full_flow_insta__smoke_test_insta.snap
