[package]
name = "ha-mitaffald"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
config = { version = "0.14.0", features = ["toml"] }
reqwest = { version = "0.12.3", features = ["json"] }
rumqttc = "0.24.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.34.0", features = ["full"] }
url = { version = "2.4.1", features = ["serde"] }

[dev-dependencies]
fluent-asserter = "0.1.9"
mockito = "1.4.0"
testcontainers = "0.16.3"
assert-json-diff = "2.0.2"
insta = { version = "1.38.0", features = ["yaml", "filters"] }
