[package]
name = "ha-mitaffald"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
config = { version = "0.15.19", features = ["toml"] }
reqwest = { version = "0.12.9", features = ["json"] }
rumqttc = "0.25.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = { version = "2.5.4", features = ["serde"] }

[dev-dependencies]
fluent-asserter = "0.1.9"
mockito = "1.6.1"
testcontainers = "0.26.0"
assert-json-diff = "2.0.2"
insta = { version = "1.41.1", features = ["yaml", "filters"] }
